--- a/html/details.html
+++ b/html/details.html
@@ -7,18 +7,18 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css..." />
-  <link rel="stylesheet" href="/css/details.css" />
+  <link rel="stylesheet" href="css/details.css" />
 </head>
 <body>
   <header>
     <div class="menu">
       <a class="logo" href="/index.html">
-        <img src="/assets/tiendamia-logo.svg" alt="Logo Store" width="218">
+        <img src="assets/tiendamia-logo.svg" alt="Logo Store" width="218">
       </a>
       <div class="social">
         <ul>
-          <li><a href="#"><img src="/assets/facebook.png" alt="facebook"></a></li>
-          <li><a href="#"><img src="/assets/instagram.png" alt="instagram"></a></li>
+          <li><a href="#"><img src="assets/facebook.png" alt="facebook"></a></li>
+          <li><a href="#"><img src="assets/instagram.png" alt="instagram"></a></li>
         </ul>
       </div>
     </div>
@@ -33,7 +33,7 @@
           <a href="/html/details.html">
           <img 
           class="product-img" 
-          src="/assets/Macbook.jpg" 
+          src="assets/Macbook.jpg" 
           alt="Macbook Pro">
           <div class="product-info">
             <span class="product-title">Macbook Pro 15'4</span>
@@ -55,7 +55,7 @@
           <a href="/html/details.html">
           <img 
           class="product-img" 
-          src="/assets/Macbook.jpg" 
+          src="assets/Macbook.jpg" 
           alt="Macbook Pro">
           <div class="product-info">
             <span class="product-title">Macbook Pro 15'4</span>
@@ -77,7 +77,7 @@
           <a href="/html/details.html">
           <img 
           class="product-img" 
-          src="/assets/Macbook.jpg" 
+          src="assets/Macbook.jpg" 
           alt="Macbook Pro">
           <div class="product-info">
             <span class="product-title">Macbook Pro 15'4</span>
