--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css..." />
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
   <header>
     <div class="menu">
       <a class="logo" href="index.html">
-        <img src="assets/tiendamia-logo.svg" alt="Logo Store" width="218">
+        <img src="./assets/tiendamia-logo.svg" alt="Logo Store" width="218">
       </a>
       <div class="form">
         <form>
@@ -22,8 +22,8 @@
       </div>
       <div class="social">
         <ul>
-          <li><a href="#"><img src="assets/facebook.png" alt="facebook"></a></li>
-          <li><a href="#"><img src="assets/instagram.png" alt="instagram"></a></li>
+          <li><a href="#"><img src="./assets/facebook.png" alt="facebook"></a></li>
+          <li><a href="#"><img src="./assets/instagram.png" alt="instagram"></a></li>
         </ul>
       </div>
     </div>
