--- a/html/details.html
+++ b/html/details.html
@@ -7,12 +7,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css..." />
-  <link rel="stylesheet" href="./css/details.css"/>
+  <link rel="stylesheet" href="../css/details.css"/>
 </head>
 <body>
   <header>
     <div class="menu">
-      <a class="logo" href="index.html">
+      <a class="logo" href="/index.html">
         <img src="../assets/tiendamia-logo.svg" alt="Logo Store" width="218">
       </a>
       <div class="social">
