--- a/html/details.html
+++ b/html/details.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="menu">
-      <a class="logo" href="/index.html">
+      <a class="logo" href="../index.html">
         <img src="../assets/tiendamia-logo.svg" alt="Logo Store" width="218">
       </a>
       <div class="social">
@@ -106,8 +106,8 @@
       </div>
     </div>
   </footer>
-  <script src="/js/layout.js"></script>
-  <script src="/js/products.js"></script>
-  <script src="/js/productDetail.js"></script>
+  <script src="../js/layout.js"></script>
+  <script src="../js/products.js"></script>
+  <script src="../js/productDetail.js"></script>
 </body>
 </html>
