--- a/html/details.html
+++ b/html/details.html
@@ -30,7 +30,7 @@
       <div class="sales-block">
         <h2>Ofertas de la Semana</h2>
         <article class="product-card">
-          <a href="/html/details.html">
+          <a href="../html/details.html">
           <img 
           class="product-img" 
           src="../assets/Macbook.jpg" 
@@ -52,7 +52,7 @@
           </a>
         </article>
         <article class="product-card">
-          <a href="/html/details.html">
+          <a href="../html/details.html">
           <img 
           class="product-img" 
           src="../assets/Macbook.jpg" 
@@ -74,7 +74,7 @@
           </a>
         </article>
         <article class="product-card">
-          <a href="/html/details.html">
+          <a href="../html/details.html">
           <img 
           class="product-img" 
           src="../assets/Macbook.jpg" 
