--- a/html/details.html
+++ b/html/details.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="menu">
-      <a class="logo" href="../index.html">
+      <a class="logo" href="../html/index.html">
         <img src="../assets/tiendamia-logo.svg" alt="Logo Store" width="218">
       </a>
       <div class="social">
